// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"Options: { "ignoreOverrideMethods": true }

class X {
  override method() {}
  override property = () => {};
}
"
`;

exports[` 2`] = `
"Options: { "ignoreClassesThatImplementAnInterface": true }

class X implements Y {
  method() {}
  property = () => {};
}
"
`;

exports[` 3`] = `
"Incorrect
Options: { "ignoreClassesThatImplementAnInterface": "public-fields" }

class X implements Y {
  method() {}
  property = () => {};

  private privateMethod() {}
  ~~~~~~~~~~~~~~~~~~~~~ Expected 'this' to be used by class method 'privateMethod'.
  private privateProperty = () => {};
  ~~~~~~~~~~~~~~~~~~~~~~~~~~ Expected 'this' to be used by class method 'privateProperty'.

  protected privateMethod() {}
  ~~~~~~~~~~~~~~~~~~~~~~~ Expected 'this' to be used by class method 'privateMethod'.
  protected privateProperty = () => {};
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Expected 'this' to be used by class method 'privateProperty'.
}
"
`;

exports[` 4`] = `
"Correct
Options: { "ignoreClassesThatImplementAnInterface": "public-fields" }

class X implements Y {
  method() {}
  property = () => {};
}
"
`;
